--- a/custom_components/uber_eats/manifest.json
+++ b/custom_components/uber_eats/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "uber_eats",
-  "name": "Uber Eats",
-  "version": "1.0.0",
-  "documentation": "https://github.com/codyc1515/hacs_uber_eats",
-  "issue_tracker": "https://github.com/codyc15/hacs_uber_eats/issues",
-  "codeowners": ["@codyc1515"],
+  "name": "Uber Eats HASS sensor",
+  "version": "1.1.0",
+  "documentation": "https://github.com/richardsj/ha-uber-eats-sensor-aus",
+  "issue_tracker": "https://github.com/richardsk/ha-uber-eats-sensor-aus",
+  "codeowners": ["@richardsj"],
   "requirements": [],
   "iot_class": "cloud_polling",
-  "dependencies": []
+  "dependencies": [],
+  "config_flow": true
 }
